[package]
authors = ["Yuri Iozzelli <y.iozzelli@gmail.com>"]
name = "overbot"
version = "0.1.0"

[dependencies]
error-chain = "0.10.0"
futures = "0.1.14"
serde = "1.0.8"
serde_derive = "1.0.8"
serde_json = "1.0.2"
tokio-core = "0.1.7"
tokio-io = "0.1.2"
tokio-process = "0.1.3"
toml = "0.4.1"
telegram-bot-client = "0.1"
telegram-bot-types = "0.1.1"

