[package]
authors = ["Yuri Iozzelli <y.iozzelli@gmail.com>"]
description = "Telegram Bot Manager that abstracts away the boring stuff and leave you the fun"
documentation = "https://docs.rs/overbot"
keywords = ["telegram", "bot", "api", "client", "async"]
license = "MIT OR Apache-2.0"
name = "overbot"
repository = "https://github.com/yuri91/overbot"
version = "0.3.3"
[dependencies]
error-chain = "0.10.0"
futures = "0.1.14"
regex = "0.2"
serde = "1.0.8"
serde_derive = "1.0.8"
serde_json = "1.0.2"
structopt = "0.0.5"
structopt-derive = "0.0.5"
telegram-bot-client = "0.2.1"
telegram-bot-types = "0.2.1"
tokio-core = "0.1.7"
tokio-io = "0.1.2"
tokio-process = "0.1.3"
toml = "0.4.1"
